http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.14
  Update to PCRE 8.10 (r7210)
  Update SCEW to 1.1.2 (r7212)
  In-line difference highlighting improvement (#3022014)
  Make comment filtering work for folder compare (#3046938)
  Recognize .ascx files as ASP files (#3042393)
  Comment filtering improvement (#3034083)
  Installer: Drop Windows 9x/ME/NT4 support from InnoSetup (#3025078)
  Bugfix: Untranslated string ("Merge.rc:nnnn") was displayed 
    in status bar (#3025855)
  Bugfix: Options dialog didn't update when importing settings
    from .ini file. (#2794137)
  Bugfix: New fix for the bug #2210403 (#2929005)
  Bugfix: Take changed compareoptions into use in folder compare (#3046938)
  Bugfix: "Copy and advance" toolbar icons not automatically enabled (#3033325)
  Bugfix: Location pane focus enabled "Save" (#3022292)
  Bugfix: WinMerge was vulnerable to DLL hijacking as described in
    Microsoft Security Advisory (2269637)  (#33056008)
  Bugfix: Fix crash with long paths (#3056974)
  Translation updates:
  - Chinese (#3033324)
  - French (#3025202)

WinMerge 2.13.13 - 2010-06-19 (r7205)
  Improve editing of linefilter regular expressions (#3015416)
  Installer: Embed MS runtime files installer for x64 (r7150)
  Installer: Set default language with MSI setup (#3014912)
  Bugfix: Compare by size always checked file times too (#2919510)
  Bugfix: Line filtering wasted huge amounts of memory (#3014162)
  Bugfix: Difference blocks not cleared after merging (#2995925)
  Bugfix: Wrong time stamp even in generated patch file (#2982964)
  Bugfix: Ignoring comments wrongly recognized // in strings (#3016907)
  New translation: Serbian (#3017674)
  Translation updates:
  - Czech (r7199)
  - Japanese (r7153)

WinMerge 2.13.12 - 2010-04-29 (r7148)
  Update copyright year to 2010
  Installer: Embed MS runtime files installer (r7139)
  Fix help locations (#2988974)
  Bugfix: Strange scrolling effect in location pane (#2942869)